[package]
name = "random_number_generators"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = {version = "0.8.5", features = ["small_rng"]}
rand_xoshiro = "0.6.0"



[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false