[package]
name = "random_number_generators"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = {version = "0.8.5", features = ["small_rng"]}
rand_xoshiro = "0.6.0"
num-primes = "0.3.0"
num-traits = "0.2.15"
plotters = "0.3.4"
plotters-svg = "0.3.3"



[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false